update: added new feature

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URL = 'mongodb+srv://samxpatel2:hEsaOq0wArxeXXaV@cluster0.fp0dl9k.mongodb.net/song'
 JWT_USER =  "usernhibatayaga"
 JWT_ADMIN =  "adminnhibatayaga"
+GEMINI_API_KEY = AIzaSyDSxNbKHj9do8p_aoLQOiyt0V1dvMiLj3M
+GEMINI_MODEL = 'gemini-2.0-flash-lite'
