--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "ws" : "ts-node ./Backend/chatAi.ts ",
+    "ws": "ts-node ./Backend/chatAi.ts ",
     "start": "nodemon --exec ts-node ./Backend/index.ts",
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@huggingface/transformers": "^3.7.2",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -25,7 +27,10 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
+    "onnxruntime-node": "^1.22.0-rev",
+    "onnxruntime-web": "^1.22.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
