--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -28,10 +29,12 @@
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "onnxruntime-node": "^1.22.0-rev",
     "onnxruntime-web": "^1.22.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
@@ -45,6 +48,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/ws": "^8.18.1",
