--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@huggingface/transformers": "^3.7.2",
     "@pinecone-database/pinecone": "^6.1.2",
