--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.24.1",
     "@huggingface/transformers": "^3.7.2",
     "@pinecone-database/pinecone": "^6.1.2",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
