--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@google/generative-ai": "^0.24.1",
     "@huggingface/transformers": "^3.7.2",
     "@pinecone-database/pinecone": "^6.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -40,6 +44,8 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.3",
     "zod": "^4.0.17"
   },
@@ -50,6 +56,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.9.1",
     "@types/nodemailer": "^7.0.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -61,7 +68,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
