--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.24.1",
     "@huggingface/transformers": "^3.7.2",
     "@pinecone-database/pinecone": "^6.1.2",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.16",
