adding sidebar and other shadcn componennts

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@google/generative-ai": "^0.24.1",
     "@huggingface/transformers": "^3.7.2",
     "@pinecone-database/pinecone": "^6.1.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.16",
     "@types/mongoose": "^5.11.96",
