--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "voyageai": "^0.0.8",
     "ws": "^8.18.3",
     "zod": "^4.0.17"
   },
