--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ MONGO_URL = "Mongo Url"
 JWT_USER = ""
 JWT_ADMIN = ""
 GEMINI_API_KEY = ""      
+SUPABASE_ANON_KEY = ''
+SUPABASE_URL = ''
+SUPABASE_SERVICE_ROLE_KEY = ''
