improved ui in ai send massage

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 MONGO_URL = "Mongo Url"
 JWT_USER = ""
 JWT_ADMIN = ""
+EMAIL = ""
+PASS = ""
 GEMINI_API_KEY = ""      
 SUPABASE_ANON_KEY = ''
 SUPABASE_URL = ''
