succefully creating get bookmark

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-MONGO_URL = "Mongo Url"
-JWT_USER = ""
-JWT_ADMIN = ""
-EMAIL = ""
-PASS = ""
-GEMINI_API_KEY = ""      
-SUPABASE_ANON_KEY = ''
-SUPABASE_URL = ''
-SUPABASE_SERVICE_ROLE_KEY = ''
+MONGO_URL = 
+JWT_USER = 
+JWT_ADMIN = 
+EMAIL = 
+PASS = 
+VOYAGE_API_KEY = 
+GEMINI_API_KEY = 
+SUPABASE_ANON_KEY = 
+SUPABASE_URL = 
+SUPABASE_SERVICE_ROLE_KEY =
