--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-.env
+backend/.env
+backend/node_modules
+frontend/node_modules
 *.local
 
 # Editor directories and files
