--- a/package.json
+++ b/package.json
@@ -1,86 +1,10 @@
 {
-  "name": "study_app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "ws": "ts-node ./Backend/chatAi.ts ",
-    "start": "nodemon --exec ts-node ./Backend/index.ts",
-    "dev": "vite && nodemon --exec ts-node ./Backend/index.ts",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "devDependencies": {
+    "@types/mongoose": "^5.11.96"
   },
   "dependencies": {
-    "@google/genai": "^1.25.0",
-    "@google/generative-ai": "^0.24.1",
-    "@huggingface/transformers": "^3.7.2",
-    "@pinecone-database/pinecone": "^6.1.2",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@supabase/supabase-js": "^2.80.0",
-    "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.16",
-    "@types/mongoose": "^5.11.96",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "chart.js": "^4.5.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "firebase": "^12.1.0",
-    "framer-motion": "^12.23.12",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.542.0",
-    "motion": "^12.23.12",
+    "@supabase/supabase-js": "^2.90.1",
     "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.6",
-    "nodemon": "^3.1.10",
-    "onnxruntime-node": "^1.22.0-rev",
-    "onnxruntime-web": "^1.22.0",
-    "react": "^19.1.1",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.8.2",
-    "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "voyageai": "^0.0.8",
-    "ws": "^8.18.3",
-    "zod": "^4.0.17",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/bcrypt": "^6.0.0",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.9.1",
-    "@types/nodemailer": "^7.0.1",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@types/ws": "^8.18.1",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "nodemailer": "^7.0.12"
   }
 }
