--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.3",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.12.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "voyageai": "^0.1.0",
